--- a/index.html
+++ b/index.html
@@ -391,12 +391,13 @@
   </div>
 </section>
 
-<!-- Testimonials Section -->
+<!-- Sección de Testimonios -->
 <section class="testimonials">
   <h2 class="text-5xl font-bold mb-12 text-center">Testimonios de Clientes Satisfechos</h2>
   <p class="text-xl text-center mb-8">Nuestros clientes nos recomiendan por nuestra experiencia y profesionalidad en seguridad informática</p>
   <div class="container">
     <div class="row justify-content-center">
+      <!-- Testimonio 1 -->
       <div class="col-md-6 col-lg-4 mb-6">
         <div class="testimonial">
           <p class="text-2xl mb-4">
@@ -404,9 +405,9 @@
             <br/><br/>
             Fue entonces cuando decidí ponerme en contacto con un equipo de hackers éticos para que me ayudaran. Desde el primer contacto, me impresionó su amabilidad y profesionalidad. Escucharon atentamente mis inquietudes y trabajaron incansablemente para resolver el problema. Todavía estoy agradecido por su ayuda, realmente me salvaron de una situación potencialmente desastrosa."
           </p>
-          <div class="d-flex mb-md-0 mb-4">
-            <div class="image-wrapper">
-              <img alt="Cliente satisfecho con el trabajo de seguridad informática" src="assets/images/mbr-20.jpg" style="width: 100px; height: 100px; object-fit: cover; border-radius: 50%;">
+          <div class="d-flex align-items-center">
+            <div class="image-wrapper mr-4">
+              <img loading="lazy" alt="Cliente satisfecho con servicios de ciberseguridad" src="assets/images/mbr-20.jpg" style="width: 100px; height: 100px; object-fit: cover; border-radius: 50%;">
             </div>
             <div class="text-wrapper">
               <p class="name mbr-fonts-style mb-1 text-3xl"><strong>Carlos Aldana</strong></p>
@@ -415,7 +416,7 @@
           </div>
         </div>
       </div>
-
+      <!-- Testimonio 2 -->
       <div class="col-md-6 col-lg-4 mb-6">
         <div class="testimonial">
           <p class="text-2xl mb-4">
@@ -423,9 +424,9 @@
             <br/><br/>
             Profesionales, hábiles y confidenciales. Superaron mis expectativas."
           </p>
-          <div class="d-flex mb-md-0 mb-4">
-            <div class="image-wrapper">
-              <img alt="Cliente satisfecho con el trabajo de hacking informático" src="assets/images/foto.png" style="width: 100px; height: 100px; object-fit: cover; border-radius: 50%;">
+          <div class="d-flex align-items-center">
+            <div class="image-wrapper mr-4">
+              <img loading="lazy" alt="Cliente satisfecho con servicios de hacking ético" src="assets/images/foto.png" style="width: 100px; height: 100px; object-fit: cover; border-radius: 50%;">
             </div>
             <div class="text-wrapper">
               <p class="name mbr-fonts-style mb-1 text-3xl"><strong>Andrés Rincón</strong></p>
@@ -434,94 +435,96 @@
           </div>
         </div>
       </div>
-
-<div class="col-md-6 col-lg-4 mb-6">
-  <div class="testimonial">
-    <p class="text-2xl mb-4">
-      "Estaba muy preocupada por la relación con mi esposo. Todas sus acciones me hacían pensar que tuviera una amante.
-      <br/><br/>
-      Fui a buscar ayuda y nunca he tomado una mejor decisión que esta. Descubrí lo que realmente estaba pasando, pude confirmar mis sospechas y confrontarlo fue lo más valiente que he hecho en mi vida."
-      <br/><strong></strong>
-    </p>
-    <div class="d-flex mb-md-0 mb-4">
-      <div class="image-wrapper">
-        <img alt="Cliente satisfecho con el trabajo de seguridad informática" src="assets/images/foto2.png" style="width: 100px; height: 100px; object-fit: cover; border-radius: 50%;">
-      </div>
-      <div class="text-wrapper">
-        <p class="name mbr-fonts-style mb-1 text-3xl"><strong>Yeimi Giraldo</strong></p>
-        <p class="position mbr-fonts-style text-xl"><strong>Cliente</strong></p>
+      <!-- Testimonio 3 -->
+      <div class="col-md-6 col-lg-4 mb-6">
+        <div class="testimonial">
+          <p class="text-2xl mb-4">
+            "Estaba muy preocupada por la relación con mi esposo. Todas sus acciones me hacían pensar que tuviera una amante.
+            <br/><br/>
+            Fui a buscar ayuda y nunca he tomado una mejor decisión que esta. Descubrí lo que realmente estaba pasando, pude confirmar mis sospechas y confrontarlo fue lo más valiente que he hecho en mi vida."
+          </p>
+          <div class="d-flex align-items-center">
+            <div class="image-wrapper mr-4">
+              <img loading="lazy" alt="Cliente satisfecho con servicios de investigación digital" src="assets/images/foto2.png" style="width: 100px; height: 100px; object-fit: cover; border-radius: 50%;">
+            </div>
+            <div class="text-wrapper">
+              <p class="name mbr-fonts-style mb-1 text-3xl"><strong>Yeimi Giraldo</strong></p>
+              <p class="position mbr-fonts-style text-xl"><strong>Cliente</strong></p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-</div>
 </section>
 
-<!-- Contact Section -->
-<section id="contact" class="container">
-  <h2 class="text-4xl font-bold mb-8">Contáctanos</h2>
-  <p class="text-xl mb-4">Obtén una consulta gratuita para identificar brechas críticas en tu sistema.</p>
-  <a href="mailto:Jefconsultantshield@gmail.com" class="cta-button">Contáctanos por email</a>
+<!-- Sección de Contacto -->
+<section id="contacts3-n" class="container">
+  <h2 class="text-4xl font-bold mb-8 text-center">Contáctanos</h2>
+  <p class="text-xl mb-4 text-center">Obtén una consulta gratuita para identificar brechas críticas en tu sistema.</p>
+  <div class="row justify-content-center mt-4">
+    <!-- Información de Contacto -->
+    <div class="card col-12 col-md-6">
+      <div class="card-wrapper d-flex align-items-center mb-4">
+        <div class="image-wrapper mr-3">
+          <a href="https://wa.me/3174832132" aria-label="Contactar por WhatsApp" target="_blank">
+            <i class="fab fa-whatsapp" style="font-size: 28.8px; color: #25D366;"></i>
+          </a>
+        </div>
+        <div class="text-wrapper">
+          <h6 class="card-title mbr-fonts-style mb-1 display-5"><strong>WhatsApp</strong></h6>
+          <p class="mbr-text mbr-fonts-style display-7">+57 317 483 2132</p>
+        </div>
+      </div>
+      <div class="card-wrapper d-flex align-items-center">
+        <div class="image-wrapper mr-3">
+          <span class="mbr-iconfont mobi-mbri-letter mobi-mbri" style="color: rgb(5, 56, 107); fill: rgb(5, 56, 107);"></span>
+        </div>
+        <div class="text-wrapper">
+          <h6 class="card-title mbr-fonts-style mb-1 display-5"><strong>Email</strong></h6>
+          <p class="mbr-text mbr-fonts-style display-7">
+            <a href="mailto:contacto@checkhaking.com" style="color: inherit; text-decoration: none;">contacto@checkhaking.com</a>
+          </p>
+        </div>
+      </div>
+    </div>
+    <!-- Mapa de Ubicación -->
+    <div class="map-wrapper col-12 col-md-6">
+      <div aria-label="Mapa de nuestra ubicación" class="google-map">
+        <iframe allowfullscreen="" frameborder="0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&q=Calle 23 No. 12-23" style="border:0; width: 100%; height: 300px;"></iframe>
+      </div>
+    </div>
+  </div>
 </section>
 
-<section class="contacts3 map1 cid-tKvCtohMlM" data-bs-version="5.1" id="contacts3-n">
-<div class="container">
-<div class="mbr-section-head">
-<h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2" style='font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; transition: all 0.3s ease-in-out;'>
-<strong>Contacto</strong>
-</h3>
-</div>
-<div class="row justify-content-center mt-4">
-<div class="card col-12 col-md-6">
-<div class="card-wrapper">
-<div class="image-wrapper">
-  <a href="https://wa.me/3174832132" style='font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; transition: all 0.3s ease-in-out; margin-top: 10%; margin-left: -20%;' target="_blank">
-    <i class="fab fa-whatsapp" style="font-size: 28.8px; color: #25D366;"></i>
-</a>
-</div>
-<div class="text-wrapper">
-<h6 class="card-title mbr-fonts-style mb-1 display-5">
-<strong>Phone</strong>
-</h6>
-<p class="mbr-text mbr-fonts-style display-5" style='font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; transition: all 0.3s ease-in-out;'>
-<a href="https://wa.me/3174832132" style='font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; transition: all 0.3s ease-in-out;' target="_blank"></a>
-</p>
-</div>
-</div>
-<div class="card-wrapper">
-<div class="image-wrapper">
-<span class="mbr-iconfont mobi-mbri-letter mobi-mbri" style="color: rgb(5, 56, 107); fill: rgb(5, 56, 107);"></span>
-</div>
-<div class="text-wrapper">
-<h6 class="card-title mbr-fonts-style mb-1 display-5">
-
-</h6>
-<p class="mbr-text mbr-fonts-style display-7" style='font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; transition: all 0.3s ease-in-out;'>
-<a href="mailto:Jefconsultantshield@gmail.com" style='font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; transition: all 0.3s ease-in-out;'>Jefconsultantshield@gmail.com</a>
-</p>
-</div>
-</div>
-</div>
-<div class="map-wrapper col-12 col-md-6">
-<div aria-label="Mapa de nuestra ubicación" class="google-map">
-<iframe allowfullscreen="" frameborder="0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=Calle 23 No. 12-23" style="border:0"></iframe>
-</div>
-</div>
-</div>
-</div>
-</section>
-</body>
-<header style="background-color: #333; color: #fff; padding: 1rem 0; text-align: center;">
-<h1 style='font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; transition: all 0.3s ease-in-out;'>Bienvenido a mi página web</h1>
-</header>
-<main>
-<p style='font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; transition: all 0.3s ease-in-out;'>Este es el contenido principal de la página.</p>
-<p style='font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; transition: all 0.3s ease-in-out;'>Aquí puede haber más información o secciones.</p>
-</main>
-<!-- Footer -->
-<footer>
-  <p>&copy; 2024 Shield Cyber Fortress. Todos los derechos reservados.</p>
-  <a href="#" class="text-orange-500">Política de Privacidad</a> | <a href="#" class="text-orange-500">Términos y Condiciones</a>
+<!-- Pie de Página -->
+<footer style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; transition: all 0.3s ease-in-out; background-color: #333; color: #fff; padding: 1rem 0; text-align: center;">
+  <p style="margin: 0;">© Copyright 2024 Check Haking Team | Funciona con Check Haking Team.</p>
+  <p style="margin: 0;">Política de Privacidad | Términos y Condiciones</p>
+  <ul class="social-icons" style="display: flex; justify-content: center; list-style-type: none; padding: 0; margin: 1rem 0 0;">
+    <li style="margin: 0 0.5rem;">
+      <a class="whatsapp-icon" href="https://wa.me/3174832132" aria-label="Contactar por WhatsApp" target="_blank" style="color: #fff; text-decoration: none;">
+        <i class="fa fa-whatsapp" style="font-size: 24px;"></i>
+      </a>
+    </li>
+    <!-- Agrega más iconos de redes sociales aquí -->
+  </ul>
 </footer>
 
-</body>
-</html>
+<!-- Scripts -->
+<script>
+  // Activar animaciones al cargar la página
+  document.addEventListener("DOMContentLoaded", () => {
+    const testimonials = document.querySelectorAll(".testimonial");
+
+    const observer = new IntersectionObserver((entries) => {
+      entries.forEach((entry) => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add("active");
+        }
+      });
+    });
+
+    testimonials.forEach((testimonial) => observer.observe(testimonial));
+  });
+</script>
