--- a/index.html
+++ b/index.html
@@ -458,52 +458,63 @@
   </div>
 </section>
 
-<!-- Sección de Contacto -->
-<section id="contacts3-n" class="container">
-  <h2 class="text-4xl font-bold mb-8 text-center">Contáctanos</h2>
-  <p class="text-xl mb-4 text-center">Obtén una consulta gratuita para identificar brechas críticas en tu sistema.</p>
-  <div class="row justify-content-center mt-4">
-    <!-- Información de Contacto -->
-    <div class="card col-12 col-md-6">
-      <div class="card-wrapper d-flex align-items-center mb-4">
-        <div class="image-wrapper mr-3">
-          <a href="https://wa.me/3174832132" aria-label="Contactar por WhatsApp" target="_blank">
-            <i class="fab fa-whatsapp" style="font-size: 28.8px; color: #25D366;"></i>
-          </a>
-        </div>
-        <div class="text-wrapper">
-          <h6 class="card-title mbr-fonts-style mb-1 display-5"><strong>WhatsApp</strong></h6>
-          <p class="mbr-text mbr-fonts-style display-7">+57 317 483 2132</p>
-        </div>
-      </div>
-      <div class="card-wrapper d-flex align-items-center">
-        <div class="image-wrapper mr-3">
-          <span class="mbr-iconfont mobi-mbri-letter mobi-mbri" style="color: rgb(5, 56, 107); fill: rgb(5, 56, 107);"></span>
-        </div>
-        <div class="text-wrapper">
-          <h6 class="card-title mbr-fonts-style mb-1 display-5"><strong>Email</strong></h6>
-          <p class="mbr-text mbr-fonts-style display-7">
-            <a href="mailto:contacto@checkhaking.com" style="color: inherit; text-decoration: none;">contacto@checkhaking.com</a>
-          </p>
-        </div>
-      </div>
+<section class="contacts3 map1 cid-tKvCtohMlM" data-bs-version="5.1" id="contacts3-n">
+  <div class="container">
+    <div class="mbr-section-head">
+      <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2" style='font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; transition: all 0.3s ease-in-out;'>
+        <strong>Contáctanos</strong>
+      </h3>
     </div>
-    <!-- Mapa de Ubicación -->
-    <div class="map-wrapper col-12 col-md-6">
-      <div aria-label="Mapa de nuestra ubicación" class="google-map">
-        <iframe allowfullscreen="" frameborder="0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&q=Calle 23 No. 12-23" style="border:0; width: 100%; height: 300px;"></iframe>
+    <p class="text-xl mb-4 text-center" style='font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; transition: all 0.3s ease-in-out;'>Obtén una consulta gratuita para identificar brechas críticas en tu sistema.</p>
+    <div class="row justify-content-center mt-4">
+      <!-- Información de Contacto -->
+      <div class="card col-12 col-md-6">
+        <div class="card-wrapper d-flex align-items-center mb-4">
+          <div class="image-wrapper mr-3">
+            <a href="https://wa.me/3174832132" aria-label="Contactar por WhatsApp" target="_blank">
+              <i class="fab fa-whatsapp" style="font-size: 24px; color: #25D366;"></i>
+            </a>
+          </div>
+          <div class="text-wrapper">
+            <h6 class="card-title mbr-fonts-style mb-1 display-5">
+              <strong>WhatsApp</strong>
+            </h6>
+            <p class="mbr-text mbr-fonts-style display-7">
+              <a href="https://wa.me/3174832132" style='font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; transition: all 0.3s ease-in-out;' target="_blank">+57 317 483 2132</a>
+            </p>
+          </div>
+        </div>
+        <div class="card-wrapper d-flex align-items-center">
+          <div class="image-wrapper mr-3">
+            <span class="mbr-iconfont mobi-mbri-letter mobi-mbri" style="color: rgb(5, 56, 107); fill: rgb(5, 56, 107);"></span>
+          </div>
+          <div class="text-wrapper">
+            <h6 class="card-title mbr-fonts-style mb-1 display-5">
+              <strong>Email</strong>
+            </h6>
+            <p class="mbr-text mbr-fonts-style display-7">
+              <a href="mailto:contacto@checkhaking.com" style='font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; transition: all 0.3s ease-in-out;'>contacto@checkhaking.com</a>
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- Mapa de Ubicación -->
+      <div class="map-wrapper col-12 col-md-6">
+        <div aria-label="Mapa de nuestra ubicación" class="google-map">
+          <iframe allowfullscreen="" frameborder="0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&q=Calle 23 No. 12-23" style="border:0"></iframe>
+        </div>
       </div>
     </div>
   </div>
 </section>
 
 <!-- Pie de Página -->
-<footer style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; transition: all 0.3s ease-in-out; background-color: #333; color: #fff; padding: 1rem 0; text-align: center;">
-  <p style="margin: 0;">© Copyright 2024 Check Haking Team | Funciona con Check Haking Team.</p>
-  <p style="margin: 0;">Política de Privacidad | Términos y Condiciones</p>
-  <ul class="social-icons" style="display: flex; justify-content: center; list-style-type: none; padding: 0; margin: 1rem 0 0;">
-    <li style="margin: 0 0.5rem;">
-      <a class="whatsapp-icon" href="https://wa.me/3174832132" aria-label="Contactar por WhatsApp" target="_blank" style="color: #fff; text-decoration: none;">
+<footer style='font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; transition: all 0.3s ease-in-out; background-color: #333; color: #fff; padding: 1rem 0; text-align: center;'>
+  <p style='font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; transition: all 0.3s ease-in-out;'>© Copyright © 2024 Check Haking Team | Funciona con Check Haking Team.</p>
+  <p style='font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; transition: all 0.3s ease-in-out;'>Política de Privacidad | Términos y Condiciones</p>
+  <ul class="social-icons" style="display: flex; justify-content: center; list-style-type: none; padding: 0;">
+    <li style='font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; transition: all 0.3s ease-in-out;'>
+      <a class="whatsapp-icon" href="https://wa.me/3174832132" aria-label="Contactar por WhatsApp" target="_blank" style='font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; transition: all 0.3s ease-in-out;'>
         <i class="fa fa-whatsapp" style="font-size: 24px;"></i>
       </a>
     </li>
@@ -516,7 +527,6 @@
   // Activar animaciones al cargar la página
   document.addEventListener("DOMContentLoaded", () => {
     const testimonials = document.querySelectorAll(".testimonial");
-
     const observer = new IntersectionObserver((entries) => {
       entries.forEach((entry) => {
         if (entry.isIntersecting) {
@@ -524,7 +534,6 @@
         }
       });
     });
-
     testimonials.forEach((testimonial) => observer.observe(testimonial));
   });
 </script>
