--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description"
         content="Servicios de hacking ético profesional y ciberseguridad para empresas. Protege tu negocio con Shield Cyber Fortress. Auditorías, pruebas de penetración, consultoría y más.">
     <meta name="keywords"
-        content="hacking ético, ciberseguridad, seguridad informática, auditoría de seguridad, pruebas de penetración, consultoría, protección de datos, seguridad empresas, Shield Cyber Fortress">
+        content="hacking ético, ciberseguridad, seguridad informática, auditoría de seguridad, pruebas de penetración, consultoría, protección de datos, seguridad de redes, seguridad digital, amenazas cibernéticas, ciberataques, Shield Cyber Fortress">
     <meta name="author" content="Shield Cyber Fortress">
     <link rel="canonical" href="https://hackerspys.github.io/">
     <link rel="shortcut icon" href="assets/images/mbr.png" type="image/x-icon">
@@ -612,14 +612,20 @@
                             <span class="mbr-iconfont mobi-mbri-letter mobi-mbri"
                                 style="color: rgb(5, 56, 107); fill: rgb(5, 56, 107);"></span>
                         </div>
-                        <div class="text-wrapper">
-                            <h6 class="card-title mbr-fonts-style mb-1 display-5">
-                                <strong>Email</strong>
-                            </h6>
-                            <p class="mbr-text mbr-fonts-style display-7">
-                                <a href="/cdn-cgi/l/email-protection#a0c3cfced4c1c3d4cfe0c3c8c5c3cbc8c1cbc9cec78ec3cfcd" style='font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; transition: all 0.3s ease-in-out;'><span class="__cf_email__" data-cfemail="35161a1b011416011a35161d10161e1d141e1c1b125b161a18">[email&#160;protected]</span></a>
-                            </p>
-                        </div>
+                        <div class="card-wrapper d-flex align-items-center">
+    <div class="image-wrapper mr-3">
+        <span class="mbr-iconfont mobi-mbri-letter mobi-mbri"
+            style="color: rgb(5, 56, 107); fill: rgb(5, 56, 107);"></span>
+    </div>
+    <div class="text-wrapper">
+        <h6 class="card-title mbr-fonts-style mb-1 display-5">
+            <strong>Email</strong>
+        </h6>
+        <p class="mbr-text mbr-fonts-style display-7">
+            <a href="mailto:info@shieldcyberfortress.com" style='font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; transition: all 0.3s ease-in-out;'>info@shieldcyberfortress.com</a>
+        </p>
+    </div>
+</div>
                     </div>
                 </div>
                 <!-- Mapa de Ubicación -->
