--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hacking Ético y Ciberseguridad | Shield Cyber Fortress - Protege tu Empresa</title>
+    <title>Hacking Ético y Ciberseguridad para Empresas | Shield Cyber Fortress</title>
     <meta name="description"
-        content="Servicios de hacking ético profesional y ciberseguridad para empresas. Protege tu negocio con Shield Cyber Fortress. Auditorías, pruebas de penetración, consultoría y más.">
+    content="Protege tu empresa con hacking ético y ciberseguridad profesional. Shield Cyber Fortress: Auditorías, pruebas de penetración y consultoría experta para asegurar tu negocio. ¡Consulta gratuita!">
     <meta name="keywords"
         content="hacking ético, ciberseguridad, seguridad informática, auditoría de seguridad, pruebas de penetración, consultoría, protección de datos, seguridad de redes, seguridad digital, amenazas cibernéticas, ciberataques, Shield Cyber Fortress">
     <meta name="author" content="Shield Cyber Fortress">
@@ -53,6 +53,7 @@
             background-color: #f7fafc;
             color: #2d3748;
             line-height: 1.6;
+            padding-top: 80px; /* Añadido para evitar la superposición de la navbar */
         }
 
         h1, h2, h3, h4, h5, h6 {
@@ -93,6 +94,7 @@
             text-align: center;
             position: relative;
             padding: 2rem;
+            overflow: visible; /* Evita que el contenido se corte */
         }
 
         .hero h1 {
@@ -399,6 +401,7 @@
             color: #007bff;
         }
     </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body class="bg-gray-100 text-gray-800">
@@ -421,55 +424,61 @@
 
     <!-- Hero Section -->
 <section class="hero">
-    <div>
-        <h1>Protege Tu Empresa con Hacking Ético y Ciberseguridad Profesional</h1>
-        <p class="mt-4 text-lg">Transforma la seguridad de tu negocio con nuestros expertos en consultoría y
-            auditoría informática. Descubrimos y eliminamos vulnerabilidades antes de que se conviertan en amenazas.
-            ¡Asegura tu futuro digital con nosotros!</p>
-        <a href="formulario.html" class="cta-button mt-6" target="_blank">Solicita una Consulta Gratuita</a>
-    </div>
-</section>
-
-    <!-- Services Section -->
-    <section id="services" class="container">
-        <h2 class="section-title">Nuestros Servicios</h2>
-        <div class="services-section">
-            <div class="service-card">
-                <i class="fas fa-shield-alt fa-3x mb-3 text-orange-500"></i>
-                <h3 class="text-2xl font-semibold">Auditorías de Seguridad</h3>
-                <p class="mt-2">Identificamos vulnerabilidades críticas en tus sistemas para prevenir ataques.</p>
-            </div>
-            <div class="service-card">
-                <i class="fas fa-search fa-3x mb-3 text-orange-500"></i>
-                <h3 class="text-2xl font-semibold">Pruebas de Penetración</h3>
-                <p class="mt-2">Simulamos ataques reales para evaluar la seguridad de tu infraestructura.</p>
-            </div>
-            <div class="service-card">
-                <i class="fas fa-users fa-3x mb-3 text-orange-500"></i>
-                <h3 class="text-2xl font-semibold">Consultoría en Ciberseguridad</h3>
-                <p class="mt-2">Diseñamos estrategias personalizadas para proteger tus datos y redes.</p>
-            </div>
-            <div class="service-card">
-                <i class="fas fa-lock fa-3x mb-3 text-orange-500"></i>
-                <h3 class="text-2xl font-semibold">Protección de Datos</h3>
-                <p class="mt-2">Implementamos medidas para cumplir con las regulaciones de protección de datos.</p>
-            </div>
-            <div class="service-card">
-                <i class="fas fa-graduation-cap fa-3x mb-3 text-orange-500"></i>
-                <h3 class="text-2xl font-semibold">Formación en Ciberseguridad</h3>
-                <p class="mt-2">Capacitamos a tu equipo para reconocer y prevenir ataques cibernéticos.</p>
-            </div>
-            <div class="service-card">
-                <i class="fas fa-laptop-code fa-3x mb-3 text-orange-500"></i>
-                <h3 class="text-2xl font-semibold">Análisis Forense Digital</h3>
-                <p class="mt-2">Investigamos incidentes de seguridad para determinar la causa y el alcance.</p>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h1>
+                    <span>Protege Tu Empresa con Hacking Ético y</span>
+                    <span>Ciberseguridad Profesional</span>
+                </h1>
+                <p class="mt-4 text-lg">
+                    Transforma la seguridad de tu negocio con nuestros expertos en <strong>consultoría de ciberseguridad</strong> y
+                    <strong>auditoría informática</strong>. Descubrimos y eliminamos <strong>vulnerabilidades de seguridad</strong> antes de que se conviertan en <strong>amenazas cibernéticas</strong>.
+                    ¡Asegura tu <strong>futuro digital</strong> con nosotros! Ofrecemos soluciones personalizadas para la <strong>seguridad informática de tu empresa</strong>.
+                </p>
+                <a href="formulario.html" class="cta-button mt-6" target="_blank">Solicita una Consulta Gratuita</a>
             </div>
         </div>
+    </div>
+</section>    <!-- Services Section -->
+    <section id="services" class="container">
+        <h2 class="section-title">Servicios Especializados en Ciberseguridad y Hacking Ético</h2>
+        <div class="services-section">
+            <div class="service-card">
+    <i class="fas fa-shield-alt fa-3x mb-3 text-orange-500"></i>
+    <h3 class="text-2xl font-semibold">Auditorías de Seguridad Informática</h3>
+    <p class="mt-2">Realizamos <strong>auditorías de seguridad exhaustivas</strong> para identificar <strong>vulnerabilidades críticas</strong> en tus sistemas y prevenir <strong>ataques informáticos</strong>.</p>
+</div>
+<div class="service-card">
+    <i class="fas fa-search fa-3x mb-3 text-orange-500"></i>
+    <h3 class="text-2xl font-semibold">Pruebas de Penetración (Pentesting)</h3>
+    <p class="mt-2">Simulamos <strong>ataques cibernéticos reales</strong> mediante <strong>pruebas de penetración</strong> para evaluar la <strong>seguridad de tu infraestructura IT</strong> y redes.</p>
+</div>
+<div class="service-card">
+    <i class="fas fa-users fa-3x mb-3 text-orange-500"></i>
+    <h3 class="text-2xl font-semibold">Consultoría Especializada en Ciberseguridad Empresarial</h3>
+    <p class="mt-2">Nuestros <strong>consultores de ciberseguridad</strong> diseñan <strong>estrategias de seguridad personalizadas</strong> para proteger tus <strong>datos empresariales</strong> y redes contra <strong>ciberamenazas</strong>.</p>
+</div>
+<div class="service-card">
+    <i class="fas fa-lock fa-3x mb-3 text-orange-500"></i>
+    <h3 class="text-2xl font-semibold">Servicios de Protección de Datos y Cumplimiento Normativo</h3>
+    <p class="mt-2">Te ayudamos a implementar <strong>medidas de seguridad para la protección de datos</strong> y asegurar el <strong>cumplimiento con las regulaciones de protección de datos</strong> vigentes.</p>
+</div>
+<div class="service-card">
+    <i class="fas fa-graduation-cap fa-3x mb-3 text-orange-500"></i>
+    <h3 class="text-2xl font-semibold">Programas de Formación y Concienciación en Ciberseguridad</h3>
+    <p class="mt-2">Ofrecemos <strong>formación en ciberseguridad para empleados</strong> y <strong>programas de concienciación</strong> para fortalecer la <strong>cultura de seguridad</strong> en tu organización y <strong>prevenir ataques de ingeniería social</strong>.</p>
+</div>
+<div class="service-card">
+    <i class="fas fa-laptop-code fa-3x mb-3 text-orange-500"></i>
+    <h3 class="text-2xl font-semibold">Análisis Forense Digital e Investigación de Incidentes de Seguridad</h3>
+    <p class="mt-2">Realizamos <strong>análisis forense digital</strong> para <strong>investigar incidentes de seguridad</strong>, determinar la causa, el alcance y las <strong>acciones de respuesta ante incidentes</strong>.</p>
+</div>
     </section>
 
     <!-- About Section -->
     <section id="about" class="container">
-        <h2 class="section-title">Acerca de Nosotros</h2>
+        <h2 class="section-title">Acerca de Shield Cyber Fortress - Expertos en Ciberseguridad</h2>
         <p class="mb-4">
             En Shield Cyber Fortress, nos dedicamos a proteger tu negocio de las crecientes amenazas cibernéticas. Con
             más de 10 años de experiencia, nuestro equipo de expertos en hacking ético y ciberseguridad ofrece
@@ -484,7 +493,7 @@
 
     <!-- Features Section -->
     <section class="container">
-        <h2 class="section-title">¿Por qué elegir Shield Cyber Fortress?</h2>
+        <h2 class="section-title">¿Por qué Confiar en Shield Cyber Fortress para tu Ciberseguridad?</h2>
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
             <div class="p-6 bg-white rounded-lg shadow-md">
                 <i class="fas fa-shield-alt fa-3x text-orange-500 mb-4"></i>
@@ -511,7 +520,7 @@
 
     <!-- Testimonials Section -->
     <section id="testimonials" class="testimonials">
-        <h2 class="section-title text-center">Testimonios de Clientes Satisfechos</h2>
+        <h2 class="section-title text-center">Testimonios de Clientes Satisfechas con Nuestros Servicios de Ciberseguridad</h2>
         <p class="text-xl text-center mb-8">Nuestros clientes nos recomiendan por nuestra experiencia y profesionalidad
             en seguridad informática</p>
         <div class="container">
@@ -581,7 +590,7 @@
             <div class="mbr-section-head">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2"
                     style='font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; transition: all 0.3s ease-in-out;'>
-                    <strong>Contáctanos</strong>
+                    <strong>Contáctanos para una Consulta Gratuita de Ciberseguridad</strong>
                 </h3>
             </div>
             <p class="text-xl mb-4 text-center"
@@ -592,7 +601,7 @@
                 <div class="card col-12 col-md-6">
                     <div class="card-wrapper d-flex align-items-center mb-4">
                         <div class="image-wrapper mr-3">
-                            <a href="https://wa.me/3174832132" aria-label="Contactar por WhatsApp" target="_blank">
+                            <a href="https://wa.me/3249583051" aria-label="Contactar por WhatsApp" target="_blank">
                                 <i class="fab fa-whatsapp" style="font-size: 24px; color: #25D366;"></i>
                             </a>
                         </div>
@@ -601,9 +610,9 @@
                                 <strong>WhatsApp</strong>
                             </h6>
                             <p class="mbr-text mbr-fonts-style display-7">
-                                <a href="https://wa.me/3174832132"
+                                <a href="https://wa.me/3249583051"
                                     style='font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; transition: all 0.3s ease-in-out;'
-                                    target="_blank">+57 317 483 2132</a>
+                                    target="_blank">+57 324 9 58 30 51</a>
                             </p>
                         </div>
                     </div>
@@ -632,7 +641,7 @@
                 <div class="map-wrapper col-12 col-md-6">
                     <div aria-label="Mapa de nuestra ubicación" class="google-map">
                         <iframe allowfullscreen="" frameborder="0"
-                            src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=Calle 23 No. 12-23"
+                            src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&q=Calle 23 No. 12-23"
                             style="border:0"></iframe>
                     </div>
                 </div>
@@ -649,9 +658,47 @@
                 <a href="#">Términos y Condiciones</a>
             </p>
             <div class="social-icons">
-                <a href="https://wa.me/3174832132" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://wa.me/3249583051" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
                 <!-- Add other social media links here -->
             </div>
         </div>
     </footer>
 
+    <!-- Contact Form Modal -->
+    <div class="modal fade" id="contactModal" tabindex="-1" aria-labelledby="contactModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="contactModalLabel">Contáctanos</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="contactForm">
+                        <div class="mb-3">
+                            <label for="name" class="form-label">Nombre</label>
+                            <input type="text" class="form-control" id="name" name="name" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email</label>
+                            <input type="email" class="form-control" id="email" name="email" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="phone" class="form-label">Teléfono (Opcional)</label>
+                            <input type="tel" class="form-control" id="phone" name="phone">
+                        </div>
+                        <div class="mb-3">
+                            <label for="message" class="form-label">Mensaje</label>
+                            <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Enviar Mensaje</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+
+</html>
